# ml-final

./: .gitattributes  .gitignore  README.md  evaluate.py  metrics.py  plot_confusion.py  plot_history.py  plot_inference.py  pyproject.toml  run_all.sh  train.py  visualize.py  visualize_stochastic.py
data/: dataset.py  prepare_voc.py
models/: deterministic.py  pixelseg.py  unet.py  unet_seg.py
runs/det/: best.pt  history.json  results_det.json  results_softmax.json
runs/pixelseg_lr1e-3/: history.json  results_pixelseg.json  results_pixelseg_greedy.json  results_pixelseg_vote_N1.json  results_pixelseg_vote_N16.json  results_pixelseg_vote_N2.json  results_pixelseg_vote_N4.json  results_pixelseg_vote_N8.json
runs/pixelseg_lr1e-4/: history.json  results_pixelseg.json
runs/pixelseg_lr1e-5/: best.pt  history.json  results_pixelseg.json
