[project]
name = "pixelseg-repro"
version = "0.1.0"
description = "PixelSeg experiments on binary Pascal VOC"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "tqdm>=4.65",
    "pillow>=10.0",
    "matplotlib>=3.7",
]

[tool.uv]
package = false
